--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -25,7 +26,8 @@
     "ndb": "^1.1.5",
     "nodemailer": "^6.4.14",
     "slugify": "^1.4.5",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
